@@ -117,7 +117,7 @@ public class HousingServiceImpl implements HousingService {
                         result.put("ratio", ratio);
 
                         return result;
-                }).collect(Collectors.toList());
+                }).toList();
         }
 
         @Override
@@ -130,7 +130,7 @@ public class HousingServiceImpl implements HousingService {
                         result.put("occupation", getOccupationName(l.getNoc43()));
 
                         return result;
-                }).collect(Collectors.toList());
+                }).toList();
         }
 
         @Override
@@ -143,7 +143,7 @@ public class HousingServiceImpl implements HousingService {
                         result.put("familyType", getFamilyTypes(l.getEfamtype()));
 
                         return result;
-                }).collect(Collectors.toList());
+                }).toList();
         }
 
         @Override
